--- a/item.html
+++ b/item.html
@@ -62,16 +62,16 @@
 
       <section class="images">
         <div class="image image--big">
-          <img src="img/pic__item--набор_для_путешествий_baxter_of_california.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="460" height="498" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="img/pic__item--набор_для_путешествий_baxter_of_california_ракурс_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/pic__item--set_travel_baxter_of_california_1.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="img/pic__item--набор_для_путешествий_baxter_of_california_ракурс_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/pic__item--set_travel_baxter_of_california_2.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
         <div class="image">
-          <img src="img/pic__item--набор_для_путешествий_baxter_of_california.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
+          <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="140" height="149" alt="Набор для путешествий &#171;Baxter of California&#187;">
         </div>
       </section>
 
