--- a/shop.html
+++ b/shop.html
@@ -112,7 +112,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--набор_для_путешествий_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
+              <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -128,7 +128,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--увлажняющий_кондиционер_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
+              <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -144,7 +144,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--гель_для_волос_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
+              <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -160,7 +160,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--глина_для_укладки_волос_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
+              <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -176,7 +176,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--гель_для_волос_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
+              <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
             </a>
           </div>
           <h2 class="item__title">
@@ -192,7 +192,7 @@
         <article class="item">
           <div class="item__image">
             <a class="item__link" href="item.html">
-              <img src="img/pic__item--набор_для_бритья_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
+              <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
             </a>
           </div>
           <h2 class="item__title">
