--- a/shop.html
+++ b/shop.html
@@ -8,58 +8,64 @@
   </head>
   <body>
     <header class="site-header">
-      <div class="container row clearfix">
-        <nav class="site-navigation col s-9">
-          <ul class="site-navigation__list clearfix">
-            <li class="site-navigation__item">
-              <div class="logo logo--nav">
-                <a href="index.html">
-                  <img src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
-                </a>
-              </div>
-            </li>
-            <li class="site-navigation__item">
-              <a href="#">Информация</a>
-            </li>
-            <li class="site-navigation__item">
-              <a href="#">Новости</a>
-            </li>
-            <li class="site-navigation__item">
-              <a href="#">Прайс-лист</a>
-            </li>
-            <li class="site-navigation__item">
-              <a href="shop.html">Магазин</a>
-            </li>
-            <li class="site-navigation__item">
-              <a href="#">Контакты</a>
-            </li>
-          </ul>
-        </nav>
+      <div class="container">
+        <div class="row clearfix">
+          <nav class="site-navigation row__col row__col--s9">
+            <ul class="site-navigation__list clearfix">
+              <li class="site-navigation__item">
+                <div class="logo logo--nav">
+                  <a href="index.html">
+                    <img src="img/pic__logo--header.gif" width="111" height="24" alt="Barbershop">
+                  </a>
+                </div>
+              </li>
+              <li class="site-navigation__item">
+                <a href="#">Информация</a>
+              </li>
+              <li class="site-navigation__item">
+                <a href="#">Новости</a>
+              </li>
+              <li class="site-navigation__item">
+                <a href="#">Прайс-лист</a>
+              </li>
+              <li class="site-navigation__item">
+                <a href="shop.html">Магазин</a>
+              </li>
+              <li class="site-navigation__item">
+                <a href="#">Контакты</a>
+              </li>
+            </ul>
+          </nav>
 
-        <div class="user col s-3 clearfix">
-          <a class="user__login" href="#">Вход</a>
+          <div class="user row__col row__col--s3 clearfix">
+            <a class="user__login" href="#">Вход</a>
+          </div>
         </div>
       </div>
     </header>
 
     <main class="container">
       <header class="page-header row">
-        <h1 class="page-header__title">Средства для ухода</h1>
-        <ul class="breadcrumbs clearfix">
-          <li class="breadcrumbs__item">
-            <a href="index.html">Главная</a>
-          </li>
-          <li class="breadcrumbs__item">
-            <a href="shop.html">Магазин</a>
-          </li>
-          <li class="breadcrumbs__item">
-            Средства для ухода
-          </li>
-        </ul>
+        <div class="row clearfix">
+          <h1 class="page-header__title row__col row__col--s12">Средства для ухода</h1>
+        </div>
+        <div class="row clearfix">
+          <ul class="breadcrumbs clearfix row__col row__col--s12">
+            <li class="breadcrumbs__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="breadcrumbs__item">
+              <a href="shop.html">Магазин</a>
+            </li>
+            <li class="breadcrumbs__item">
+              Средства для ухода
+            </li>
+          </ul>
+        </div>
       </header>
 
       <div class="row clearfix">
-        <section class="filter col s-3">
+        <section class="filter row__col row__col--s3">
           <form class="filter__form" action="#" method="POST">
             <fieldset class="filter__manufacturers">
               <legend class="filter__title">Производители:</legend>
@@ -111,9 +117,9 @@
           </form>
         </section>
 
-        <section class="items col s-9">
+        <section class="items row__col row__col--s9">
           <div class="row clearfix">
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--set_travel_baxter_of_california.jpg" width="220" height="165" alt="Набор для путешествий &#171;Baxter of California&#187;">
@@ -129,7 +135,7 @@
               <a class="btn btn--buy" href="#">Купить</a>
             </article>
 
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--moisturizing_conditioner_baxter_of_california.jpg" width="220" height="165" alt="Увлажняющий кондиционер &#171;Baxter of California&#187;">
@@ -145,7 +151,7 @@
               <a class="btn btn--buy" href="#">Купить</a>
             </article>
 
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--hair_gel_suavecito.jpg" width="220" height="165" alt="Гель для волос &#171;Suavecito&#187;">
@@ -163,7 +169,7 @@
           </div>
 
           <div class="row clearfix">
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--clay_for_hair_styling_american_crew.jpg" width="220" height="165" alt="Глина для укладки волос &#171;American crew&#187;">
@@ -179,7 +185,7 @@
               <a class="btn btn--buy" href="#">Купить</a>
             </article>
 
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--hair_gel_american_crew.jpg" width="220" height="165" alt="Гель для волос &#171;American crew&#187;">
@@ -195,7 +201,7 @@
               <a class="btn btn--buy" href="#">Купить</a>
             </article>
 
-            <article class="item col s-3">
+            <article class="item row__col row__col--s4">
               <div class="item__image">
                 <a class="item__link" href="item.html">
                   <img src="img/pic__item--shaving_kit_baxter_of_california.jpg" width="220" height="165" alt="Набор для бритья &#171;Baxter of California&#187;">
@@ -212,8 +218,8 @@
             </article>
           </div>
 
-          <div class="paginator">
-            <ul class="paginator__list clearfix">
+          <div class="paginator row">
+            <ul class="paginator__list row__col row__col--s12 clearfix">
               <li class="btn btn--paginator">
                 <a href="#">1</a>
               </li>
@@ -233,27 +239,29 @@
     </main>
 
     <footer class="site-footer">
-      <div class="container row clearfix">
-        <section class="contacts col s-5">
-          <p class="contacts__title">Барбершоп «Бородинский»</p>
-          <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
-          <p class="contacts__link">
-            <a href="#">Как нас найти?</a>
-          </p>
-          <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
-        </section>
+      <div class="container">
+        <div class="row clearfix">
+          <section class="contacts row__col row__col--s5">
+            <p class="contacts__title">Барбершоп «Бородинский»</p>
+            <p class="contacts__address">Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8</p>
+            <p class="contacts__link">
+              <a href="#">Как нас найти?</a>
+            </p>
+            <p class="contacts__phone">Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a></p>
+          </section>
 
-        <section class="social col s-2 clearfix">
-          <p class="social__text">Давайте дружить!</p>
-          <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
-          <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
-          <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
-        </section>
+          <section class="social row__col row__col--s2 clearfix">
+            <p class="social__text">Давайте дружить!</p>
+            <a class="social__btn social__btn--vk" href="#">Вконтакте</a>
+            <a class="social__btn social__btn--fb" href="#">Фейсбук</a>
+            <a class="social__btn social__btn--inst" href="#">Инстаграм</a>
+          </section>
 
-        <section class="copyright col s-5">
-          <p class="copyright__text">Разработано:</p>
-          <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
-        </section>
+          <section class="copyright row__col row__col--s5">
+            <p class="copyright__text">Разработано:</p>
+            <a class="btn btn--copyright" href="https://htmlacademy.ru">HTML Academy</a>
+          </section>
+        </div>
       </div>
     </footer>
   </body>
